# cuda-pooling

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: analyze_performance.py  bench_a40.json  bench_dtype.py  bench_full.py  bench_multidtype.py  bench_pooling.py  bench_thor.json  bench_timed.py  debug_subprocess.py  gen_plots.py  profile_ncu.py  profile_nsys.py
docs/: profiling_report.md  profiling_report_v2.md
docs/plots/: cross_gpu_report.md
docs/superpowers/plans/: 2026-04-22-cuda-pooling2d.md
docs/superpowers/specs/: 2026-04-22-cuda-pooling2d-design.md
include/: pooling.cuh
src/: maxpool_v15_kernel.cuh  pooling_avg.cu  pooling_avg_dtypes.cu  pooling_max.cu  pooling_max_dtypes.cu  pybind_module.cpp
tests/: conftest.py  test_avgpool.py  test_maxpool.py
